--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt": "^1.0.2",
     "grunt-browserify": "^5.2.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-processhtml": "^0.4.1",
     "grunt-zip": "^0.17.1"
   }
 }
